Fixed: PHP warning when updating to 8.1 ( [#1205](https://github.com/WPChill/download-monitor/issues/1205) )
Fixed: Members only checkbox in quick edit is always empty ( [#1211](https://github.com/WPChill/download-monitor/issues/1211) )
Fixed: Dashboard top downloads widget disproportional hightlight  ( [#1167](https://github.com/WPChill/download-monitor/issues/1167) )

= 4.7.75 - 06.02.2023 =
Changed: Optimised to request chunked user_data for reports table ( [#1192](https://github.com/WPChill/download-monitor/issues/1192) )
Changed: Optimised the number of queries for dlm db tabless check ( [#1206](https://github.com/WPChill/download-monitor/issues/1206) )
Fixed: Downloads not working if the "/" in front of the file path is missing ( [#1207](https://github.com/WPChill/download-monitor/issues/1207) )
Added: Filter to no check for file extensions if the source is remote ( [#1208](https://github.com/WPChill/download-monitor/issues/1208) )
Fixed: Sanitize file name on download ( [#1187](https://github.com/WPChill/download-monitor/issues/1187) )

= 4.7.74 - 01.02.2023 =
Fixed: Encoded commas in file name ( [#1187](https://github.com/WPChill/download-monitor/issues/1187) )
Fixed: iThemes security and reports REST api ( [#1185](https://github.com/WPChill/download-monitor/issues/1185) )
Fixed: End js code execution after window.location.href ( [#1203](https://github.com/WPChill/download-monitor/issues/1203) )
Changed: File size is now displayed as a value with 2 decimals ( [#1204](https://github.com/WPChill/download-monitor/issues/1204) )

= 4.7.73 - 17.01.2023 =
Fixed: XHR error on <a> tags without href attribute ( [#1188](https://github.com/WPChill/download-monitor/issues/1188) )
Fixed: Click to copy shortcode from admin list view ( [#1072](https://github.com/WPChill/download-monitor/issues/1072) )

= 4.7.72 - 09.01.2023 =
Changed: Enqueue welcome banner assets only on the welcome page ( [#1153](https://github.com/WPChill/download-monitor/issues/1153) )